src/objects/Eval__c.object
<CustomObject>
    <description>List of fields that make up a particular Evaluation.</description>
    <fields>
        <fullName>API_Name_Flag__c</fullName>
        <description>This field is created to save the API name of the Evaluation field to clone the values from Referral eval to Resident Assessment</description>
        <label>API Name Flag</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cat_Seq_Text__c</fullName>
        <description>text version of sequence</description>
        <label>Cat Seq Text</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Sequence__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Category Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Users can name a set of fields.</description>
        <inlineHelpText>Name a group of fields</inlineHelpText>
        <label>Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controlling_Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>eval field that controls this field</description>
        <label>Controlling Field</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Eval__c.Category__c</field>
                <operation>equals</operation>
                <valueField>Eval__c.Category__c</valueField>
            </filterItems>
            <filterItems>
                <field>Eval__c.Sub_Category__c</field>
                <operation>equals</operation>
                <valueField>Eval__c.Sub_Category__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Eval__c</referenceTo>
        <relationshipLabel>Dependent Fields</relationshipLabel>
        <relationshipName>Controlling_field</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dependent_Fields__c</fullName>
        <description>The html ids array of the fields that are controlled based on the value in this field.</description>
        <label>Dependent Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eval_Record_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Eval Record Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Eval_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Eval Type</label>
        <referenceTo>Eval_Type__c</referenceTo>
        <relationshipLabel>Evals</relationshipLabel>
        <relationshipName>Evals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>85</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Sequence__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Field Sequence</label>
        <precision>17</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Sub_Type__c</fullName>
        <description>We may have to boolean types, one for a checkbox and another for a radio button...</description>
        <label>Field Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropdown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Int</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datetime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropdown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiselect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RegEx__c</fullName>
        <label>RegEx</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubCat_Seq_Text__c</fullName>
        <defaultValue>&quot;1001&quot;</defaultValue>
        <label>SubCat Seq Text</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubSubCat_Seq_Text__c</fullName>
        <defaultValue>&quot;1001&quot;</defaultValue>
        <label>SubSubCat Seq Text</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category_Sequence__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Sub Category Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <description>Users can sub categorize a group of fields.</description>
        <inlineHelpText>Users can sub categorize a group of fields.</inlineHelpText>
        <label>Sub Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Sub_Category_Sequence__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Sub Sub Category Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Sub_Category__c</fullName>
        <description>Have another category level for grouped fields.</description>
        <label>Sub Sub Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>htmlid__c</fullName>
        <label>htmlid</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>visibility_row_rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>visibility-row-rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>visibility_rules__c</fullName>
        <label>visibility-rules</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Eval</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Eval_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Sub_Sub_Category__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Field_Sequence__c</columns>
        <columns>Field_Type__c</columns>
        <columns>Field_Sub_Type__c</columns>
        <columns>htmlid__c</columns>
        <columns>Dependent_Fields__c</columns>
        <columns>visibility_row_rules__c</columns>
        <columns>visibility_rules__c</columns>
        <columns>Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Head_to_Toe</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Category_Sequence__c</columns>
        <columns>Eval_Type__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Field_Sequence__c</columns>
        <columns>Field_Type__c</columns>
        <columns>Field_Sub_Type__c</columns>
        <columns>htmlid__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Sub_Category_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Eval_Type__c</field>
            <operation>equals</operation>
            <value>Head to Toe</value>
        </filters>
        <label>Head to Toe</label>
    </listViews>
    <listViews>
        <fullName>Resident_Evals</fullName>
        <columns>NAME</columns>
        <columns>Eval_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Category_Sequence__c</columns>
        <columns>Field_Name__c</columns>
        <columns>API_Name_Flag__c</columns>
        <columns>Field_Sequence__c</columns>
        <columns>Field_Type__c</columns>
        <columns>Field_Sub_Type__c</columns>
        <columns>htmlid__c</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Eval_Type__c</field>
            <operation>equals</operation>
            <value>Residential</value>
        </filters>
        <label>Resident Evals</label>
    </listViews>
    <nameField>
        <label>Eval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Evals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>